Fix markdown image overflow on mobile

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -52,3 +52,11 @@
     background-image: linear-gradient(to bottom, var(--color-neutral-900), var(--color-raisin));
   } */
 }
+
+@layer base {
+  article img,
+  .prose img {
+    max-width: 100%;
+    height: auto;
+  }
+}
